[package]
name = "bevy_tasks"
version = "0.8.0-dev"
edition = "2021"
description = "A task executor for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
futures-lite = "1.4.0"
async-executor = { git = "https://github.com/hymm/async-executor", branch = "bevy-experiments" } 
async-channel = "1.4.2"
num_cpus = "1.0.1"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
